--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					Batatabit te ayuda a navegar entre los diferentes precios y
 					tendencias.
 				</p>
-				<a class="header--button" href="#"
+				<a class="header--button" href="#plans"
 					>Conoce Nuestros Planes <span></span
 				></a>
 			</div>
@@ -105,8 +105,8 @@
 				</section>
 			</section>
 			<section class="main-product-detail">
-				<span></span>
-				<div>
+				<span class="product-detail--batatalogo"></span>
+				<div class="product-detail--title">
 					<h2>Creamos un producto sin comparación.</h2>
 					<p>Confiable y diseñado para su uso diario.</p>
 				</div>
@@ -120,10 +120,91 @@
 						</p>
 					</article>
 				</section>
+				<section class="product-cards--container">
+					<article class="product-detail--card">
+						<span class="eye"></span>
+						<p class="product--card-title">No hay tasas escondidas</p>
+						<p class="product--card-body">
+							Ni en la compra o al momento de exit, Batabit siempre te muestra
+							el costo real de lo que estás adquiriendo.
+						</p>
+					</article>
+				</section>
+				<section class="product-cards--container">
+					<article class="product-detail--card">
+						<span class="dollar"></span>
+						<p class="product--card-title">Compara monedas</p>
+						<p class="product--card-body">
+							No más rumores, con Babtabit sabrás el valor real de cada moneda
+							en el mercado actual.
+						</p>
+					</article>
+				</section>
+				<section class="product-cards--container">
+					<article class="product-detail--card">
+						<span class="check"></span>
+						<p class="product--card-title">Información confiable</p>
+						<p class="product--card-body">
+							Nuestras fuentes están 100% verificadas y continuamos auditando su
+							contenido mientras se actualizan.
+						</p>
+					</article>
+				</section>
 			</section>
-			<section></section>
-			<section></section>
+			<section class="bitcoin-img-container">
+				<h2>Conócelo hoy.</h2>
+			</section>
+			<section id="plans" class="main-plans-container">
+				<div class="plans--title">
+					<h2>Escoge el plan que mejor se ajuste a ti.</h2>
+					<p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+				</div>
+				<section class="plans-container--slider">
+					<article class="plans-container--card">
+						<div class="plan-info-container">
+							<h3 class="plan-card--title">Pago Anual</h3>
+							<p class="plan-card--price"><span>$</span>99</p>
+							<p class="plan-card--saving">
+								*Ahorras $129 comparado al plan mensual.
+							</p>
+							<button class="plan-card--cta">Escoge este <span></span></button>
+						</div>
+					</article>
+					<article class="plans-container--card">
+						<p class="recommended">Recomendado</p>
+						<div class="plan-info-container">
+							<h3 class="plan-card--title">Pago Anual</h3>
+							<p class="plan-card--price"><span>$</span>99</p>
+							<p class="plan-card--saving">
+								*Ahorras $129 comparado al plan mensual.
+							</p>
+							<button class="plan-card--cta">Escoge este <span></span></button>
+						</div>
+					</article>
+					<article class="plans-container--card">
+						<div class="plan-info-container">
+							<h3 class="plan-card--title">Pago Anual</h3>
+							<p class="plan-card--price"><span>$</span>99</p>
+							<p class="plan-card--saving">
+								*Ahorras $129 comparado al plan mensual.
+							</p>
+							<button class="plan-card--cta">Escoge este <span></span></button>
+						</div>
+					</article>
+				</section>
+			</section>
 		</main>
-		<footer></footer>
+		<footer>
+			<section class="left">
+				<ul>
+					<li><a href="">Linkedin</a></li>
+					<li><a href="">Crunchbase</a></li>
+					<li><a href="">Hackernews</a></li>
+				</ul>
+			</section>
+			<section class="right">
+				<img src="./assets/img/logo-footer.svg" alt="Logo de batatabit" />
+			</section>
+		</footer>
 	</body>
 </html>
