landing page complete

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="./css/tablet.css" media="(min-width: 930px)" />
 	</head>
 	<body>
 		<header>
@@ -68,8 +69,6 @@
 							<p><b>Actualizado:</b> 19 Julio 23:45</p>
 						</div>
 					</div>
-				</section>
-				<section class="main-tables-container">
 					<div class="main-commissions-table">
 						<p class="commissions-table--title">Comisiones</p>
 						<div class="commissions-table--container">
@@ -119,8 +118,6 @@
 							más determinan el comportamiento.
 						</p>
 					</article>
-				</section>
-				<section class="product-cards--container">
 					<article class="product-detail--card">
 						<span class="eye"></span>
 						<p class="product--card-title">No hay tasas escondidas</p>
@@ -129,8 +126,6 @@
 							el costo real de lo que estás adquiriendo.
 						</p>
 					</article>
-				</section>
-				<section class="product-cards--container">
 					<article class="product-detail--card">
 						<span class="dollar"></span>
 						<p class="product--card-title">Compara monedas</p>
@@ -139,8 +134,6 @@
 							en el mercado actual.
 						</p>
 					</article>
-				</section>
-				<section class="product-cards--container">
 					<article class="product-detail--card">
 						<span class="check"></span>
 						<p class="product--card-title">Información confiable</p>
